--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Golding LLC</title>
     <link href="/src/styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/Golding.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
